--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "frontend": "file:",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.441.0",
+    "razorpay": "^2.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
