--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lucide-react": "^0.441.0",
     "razorpay": "^2.9.4",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
