--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/redux-persist": "^4.3.1",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -46,6 +47,7 @@
     "lucide-react": "^0.441.0",
     "razorpay": "^2.9.4",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
