--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "framer-motion": "^11.5.6",
     "frontend": "file:",
     "input-otp": "^1.2.4",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.441.0",
     "razorpay": "^2.9.4",
     "react": "^18.3.1",
@@ -61,6 +63,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
