--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/redux-persist": "^4.3.1",
     "@uidotdev/usehooks": "^2.4.1",
@@ -43,10 +44,12 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.5.6",
     "frontend": "file:",
+    "google-maps-react": "^2.0.6",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.441.0",
+    "mapbox-gl": "^3.7.0",
     "razorpay": "^2.9.4",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -54,6 +57,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-map-gl": "^7.1.7",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "redux-persist": "^6.0.0",
@@ -64,6 +68,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/google.maps": "^3.58.1",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
