--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-map-gl": "^7.1.7",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "react-simple-typewriter": "^5.0.1",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.0",
     "tailwind-merge": "^2.5.2",
